# pure-prolog

./: .gitignore  package.yaml  pure-prolog.cabal
