cabal-version:      >= 1.2
name:               pure-prolog
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            MIT
author:             Ken Friis Larsen

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    -- Modules included in this executable, other than Main.
    other-modules: Analysis, Ast, Interp, Parser

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, parsec, pretty, containers, cmdargs
    hs-source-dirs:   src
    default-language: Haskell2010

executable pure-prolog
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0, parsec, pretty, containers, cmdargs, pure-prolog
    hs-source-dirs:   src
    default-language: Haskell2010
