cabal-version: 2.4

name:           pure-prolog
version:        0.2.1
synopsis:       Pure Prolog interpreter
author:         Ken Friis Larsen
maintainer:     ken@friislarsen.net
copyright:      Ken Friis Larsen, 2012-2022
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    tests/siblings.pl

library
  exposed-modules:
      Ast
      Analysis
      Parser
      Interp
  other-modules:
      Paths_pure_prolog
  hs-source-dirs:
      src
  build-depends:
      base >= 4 && < 5
    , containers
    , parsec
    , pretty
  default-language: Haskell2010

executable pure-prolog
  main-is: Main.hs
  other-modules:
      Paths_pure_prolog
  build-depends:
      base >= 4 && < 5
    , cmdargs
    , pure-prolog
  default-language: Haskell2010

test-suite prolog-test-suite
  type: exitcode-stdio-1.0
  main-is: Test.hs
  other-modules:
      Paths_pure_prolog
  hs-source-dirs:
      tests
  build-depends:
      base >= 4 && < 5
    , pure-prolog
    , tasty
    , tasty-hunit
  default-language: Haskell2010
